--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/typing?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Seoul
     username: root
-    password: root
+    password: Abcd123@
 
   ## JPA Setting Info
   jpa:
