--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,14 @@ spring:
   ## JPA Setting Info
   jpa:
     hibernate:
-      ddl-auto: create  # option type: create, create-drop, update, validate, none
+      ddl-auto: none  # option type: create, create-drop, update, validate, none
     properties:
       hibernate:
         format_sql: true
         use_sql_comments: true
+
+  profiles:
+    include: database
 
 logging:
   level:
