--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,22 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
+  batch:
+    jdbc:
+      initialize-schema: always
 
   ## JPA Setting Info
   jpa:
     hibernate:
-      ddl-auto: none  # option type: create, create-drop, update, validate, none
+      ddl-auto: create  # option type: create, create-drop, update, validate, none
     properties:
       hibernate:
         format_sql: true
         use_sql_comments: true
+#        show_sql: true
 
   profiles:
-    include: database
+    include: database, port
 
 logging:
   level:
