--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ build/
 
 ### config ###
 **/src/main/resources/application-database.yml
+**/src/main/resources/application-port.yml
 
 ### STS ###
 .apt_generated
