--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ build/
 ### config ###
 **/src/main/resources/application-database.yml
 **/src/main/resources/application-port.yml
+**/src/main/resources/application-corp.yml
 
 ### STS ###
 .apt_generated
