--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 #        show_sql: true
 
   profiles:
-    include: database, port
+    include: database, port, corp
 
 logging:
   level:
